# me-engineering-assistant

./: .env.example  .gitignore  README.md  dockerfile  pyproject.toml
.chroma/ECU-700/: chroma.sqlite3
.chroma/ECU-800-base/: chroma.sqlite3
.chroma/ECU-800-plus/: chroma.sqlite3
data/.chroma/: chroma.sqlite3
src/me_engineering_assistant/: __init__.py  __main__.py  api.py  config.py  data_loader.py  graph.py  log_model.py  mlflow_model.py  rag_chain.py  router.py  sandbox_test.py  vectorstore.py
src/me_engineering_assistant.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: benchmark.py  test_agent_e2e.py
