[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "me-engineering-assistant"
version = "0.1.0"
description = "ME Engineering Assistant – multi-source RAG agent for ECU docs"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Quincey" },
]

dependencies = [
  "langchain",
  "langgraph",
  "langchain-community",
  "langchain-text-splitters",
  "sentence-transformers",
  "chromadb",
  "fastapi",
  "uvicorn[standard]",
  "mlflow",
  "pydantic",
  "pytest",
  "pylint",
  "transformers",
  "accelerate",
  "sentencepiece",
]

[project.optional-dependencies]
dev = ["pytest", "pylint"]
